--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 <link rel="stylesheet" type="text/css" href="simplest.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="./toggle.js"></script>
-<script src="./mergeSort.js"></script>
-</head>
+<script src="./mergeSort.js"></script></head>
 <body>
 <div class="container">
 <div class="content">
 <table>
 <tbody>
 <tr>
-<td rowspan="3"> <img src="PIC2.JPG" alt="Your Pic" height="180"> </td>
+<td rowspan="3"> <img style="width: 321px; height: 180px;" src="./PIC2.JPG" alt="Your Pic"> </td>
 <td>
 <h2>Yong-Jin Han </h2>
 <p>Ph. D.</p>
