remove unnecessary link

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ and <a href="http://exobrain.kr/">EXOBRAIN</a>.
 </p>
 <h2><a href="http://exobrain.kr/"> Research
 Interests </a></h2>
-<p><a href="http://exobrain.kr/"> Computational
+<p> Computational
 Social Science, Semantic Web, Natural Language
-Processing, Machine Learning </a></p>
+Processing, Machine Learning </p>
 <h2><a href="http://exobrain.kr/"> Publications </a></h2>
 <a class="toggle_link" href="javascript:toggle('data-time', false)">Sort by year</a>
 | <a class="toggle_link" href="javascript:toggle('data-topic', false)">Sort by topic</a>
