--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <table>
 <tbody>
 <tr>
-<td rowspan="3"> <img style="width: 321px; height: 180px;" src="./PIC2.JPG" alt="Your Pic"> </td>
+<td rowspan="3"> <img style="width: 321px; height: 180px;" src="PIC2.jpg" alt="Your Pic"> </td>
 <td>
 <h2>Yong-Jin Han </h2>
 <p>Ph. D.</p>
