--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" type="text/css" href="simplest.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="./toggle.js"></script>
-<script src="./mergeSort.js"></script></head>
+<script src="./mergeSort.js"></script>
+</head>
 <body>
 <div class="container">
 <div class="content">
@@ -115,8 +116,7 @@ Journal of Korean Institute of Intelligent Systems, 24(3), 2014
 <li class="publication" data-time="20070901" data-venue="Natural Language Processing and Knowledge Engineering (NLP-KE)" data-topic="Semantic Web" data-type="International Conference Papers">
 <span class="paper_title">Reconstruction of people
 information based on an event ontology</span>&nbsp;&nbsp;
-<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4368069&amp;tag=1">[View
-at Publisher]</a>&nbsp;<a href="./bib/ic8.bib">[Bib]</a>
+<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4368069&amp;tag=1">[View]</a>&nbsp;<a href="./bib/ic8.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span>, Seyoung
 Park, Seong-Bae Park, Young-Hwa Lee, Kweonyang Kim<br>
@@ -127,8 +127,7 @@ Natural Language Processing and Knowledge Engineering (NLP-KE), 2007
 <li class="publication" data-time="20070801" data-venue="Advanced Language Processing and Web Information Technology (ALPIT)" data-topic="Semantic Web" data-type="International Conference Papers">
 <span class="paper_title">Ontology population from
 unstructured and semi-structured texts</span>&nbsp;&nbsp;
-<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4460628">[View
-at Publisher]</a>&nbsp;<a href="./bib/ic9.bib">[Bib]</a>
+<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4460628">[View]</a>&nbsp;<a href="./bib/ic9.bib">[Bib]</a>
 <br>
 Hee-Geun Yoon, <span class="self">Yong-Jin Han</span>,
 Seong-Bae Park, Seyoung Park<br>
@@ -140,8 +139,7 @@ Advanced Language Processing and Web Information Technology (ALPIT),
 <li class="publication" data-time="20080701" data-venue="Advanced Language Processing and Web Information Technology (ALPIT)" data-topic="Natural Language Processing" data-type="International Conference Papers">
 <span class="paper_title">Determining Gender of Korean
 Names with Context</span>&nbsp;&nbsp;
-<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4584353">[View
-at Publisher]</a>&nbsp;<a href="./bib/ic10.bib">[Bib]</a>
+<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4584353">[View]</a>&nbsp;<a href="./bib/ic10.bib">[Bib]</a>
 <br>
 Hee-Geun Yoon, Seong-Bae Park, <span class="self">Yong-Jin
 Han</span>, Sang-Jo Lee<br>
@@ -153,8 +151,7 @@ Advanced Language Processing and Web Information Technology (ALPIT),
 <li class="publication" data-time="20130701" data-venue="KIPS Transactions on Software and Data Engineering" data-topic="Computational Social Science" data-type="National Journal Papers">
 <span class="paper_title">Estimating Personal and
 Social Information for Mobile User</span>&nbsp;&nbsp;
-<a href="http://www.koreascience.or.kr/article/ArticleFullRecord.jsp?cn=JBCRJM_2013_v2n9_603">[View
-at Publisher]</a>&nbsp;<a href="./bib/nc4.bib">[Bib]</a>
+<a href="http://www.koreascience.or.kr/article/ArticleFullRecord.jsp?cn=JBCRJM_2013_v2n9_603">[View]</a>&nbsp;<a href="./bib/nc4.bib">[Bib]</a>
 <br>
 Jeong-Woo Son, <span class="self">Yong-Jin Han</span>,
 Hyun-Je Song, Seong-Bae Park, Sang-Jo Lee<br>
@@ -165,8 +162,7 @@ KIPS Transactions on Software and Data Engineering, 2(9), 2013
 <li class="publication" data-time="20100201" data-venue="Intelligent visual interfaces for text analysis (IVITA)" data-topic="Semantic Web" data-type="Workshop Papers">
 <span class="paper_title">User analysis and
 visualization from a semantic blog system</span>&nbsp;&nbsp;
-<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4584353">[View
-at Publisher]</a>&nbsp;<a href="./bib/ic11.bib">[Bib]</a>
+<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4584353">[View]</a>&nbsp;<a href="./bib/ic11.bib">[Bib]</a>
 <br>
 Jeong-Woo Son, <span class="self">Yong-Jin Han</span>,
 Tae-Gil Noh, Seong-Bae Park, Seyoung Park<br>
