--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ Processing, Machine Learning </p>
 <h2><a href="http://exobrain.kr/"> Publications </a></h2>
 <a class="toggle_link" href="javascript:toggle('data-time', false)">Sort by year</a>
 | <a class="toggle_link" href="javascript:toggle('data-topic', false)">Sort by topic</a>
-| <a class="toggle_link" href="javascript:toggle('data-venue', false)">Sort by venue</a>
+<!--| <a class="toggle_link"
+href="javascript:toggle('data-venue', false)">Sort by venue</a>-->
 | <a class="toggle_link" href="javascript:toggle('data-type', false)">Sort by type</a>
 <div class="anchors"></div>
 <div class="publications"> </div>
