--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@ technologies. The research is conducted as part of three main projects,
 <a href="http://www.slideshare.net/june820/5mobile-platforms-soongsil-univer">MobilePlatform</a>,
 and <a href="http://exobrain.kr/">EXOBRAIN</a>.
 </p>
-<h2><a href="http://exobrain.kr/"> Research
-Interests </a></h2>
+<h2> Research
+Interests </h2>
 <p> Computational
 Social Science, Semantic Web, Natural Language
 Processing, Machine Learning </p>
-<h2><a href="http://exobrain.kr/"> Publications </a></h2>
+<h2> Publications </h2>
 <a class="toggle_link" href="javascript:toggle('data-time', false)">Sort by year</a>
 | <a class="toggle_link" href="javascript:toggle('data-topic', false)">Sort by topic</a>
 <!--| <a class="toggle_link"
