add google scholar logo

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 </td>
 </tr>
 <tr>
-<td> <a href="https://scholar.google.co.kr/citations?hl=ko&amp;user=1-wfCqQAAAAJ"><img src="" alt="My profile on Google Scholar" height="30"></a>
-<a href=""><img src="" alt="My profile on LinkedIn" height="28"></a></td>
+<td> <a href="https://scholar.google.co.kr/citations?hl=ko&amp;user=1-wfCqQAAAAJ"><img style="border: 0px solid ; width: 57px; height: 24px;" src="Google_Scholar_logo.png" alt="My profile on Google Scholar"></a>
+<!-- <a href=""><img src="Google_Scholar_logo.png"
+alt="My profile on LinkedIn" height="28"></a>--></td>
 </tr>
 </tbody>
 </table>
@@ -47,19 +48,11 @@ Processing, Machine Learning </p>
 <a class="toggle_link" href="javascript:toggle('data-time', false)">Sort by year</a>
 | <a class="toggle_link" href="javascript:toggle('data-topic', false)">Sort by topic</a>
 <!--| <a class="toggle_link"
-href="javascript:toggle('data-venue', false)">Sort by venue</a>-->
-| <a class="toggle_link" href="javascript:toggle('data-type', false)">Sort by type</a>
+href="javascript:toggle('data-venue', false)">Sort by venue</a>-->|
+<a class="toggle_link" href="javascript:toggle('data-type', false)">Sort by type</a>
 <div class="anchors"></div>
 <div class="publications"> </div>
-<h2>Service</h2>
-<p> Technical Program Committee: </p>
-<ul>
-<li>Committee Memberships</li>
-</ul>
-<p> Reviewer, external reviewer or sub-reviewer: </p>
-<ul>
-<li>Paper Reviews</li>
-</ul>
+<br>
 </div>
 </div>
 <div id="publicationdatabase" style="display: none;">
@@ -68,8 +61,7 @@ href="javascript:toggle('data-venue', false)">Sort by venue</a>-->
 <span class="paper_title">A Single-directional
 Influence Topic Model Using Call and Proximity Logs Simultaneousl
 (SCIE, IF=1.27)</span>&nbsp;&nbsp;
-<a href="http://dx.doi.org/10.1007/s00500-015-1898-8">[View
-]</a>&nbsp;<a href="./bib/sc1.bib">[Bib]</a>
+<a href="http://dx.doi.org/10.1007/s00500-015-1898-8">[View]</a>&nbsp;<a href="./bib/sc1.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span>,
 Seong-Bae Park, Seyoung Park<br>
