--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Concordant with a Knowledge Base (SCIE, IF=0.596)</span>&nbsp;&nbsp;
 <br>
 <span class="self">Yong-Jin Han</span>,
 Seong-Bae Park, Seyoung Park<br>
-Soft Computing, 2015
+Computational Intelligence and Neuroscience, 2015
 <br>
 <br>
 </li>
@@ -140,7 +140,7 @@ Advanced Language Processing and Web Information Technology (ALPIT),
 </li>
 <li class="publication" data-time="20130701" data-venue="KIPS Transactions on Software and Data Engineering" data-topic="Computational Social Science" data-type="National Journal Papers">
 <span class="paper_title">Estimating Personal and
-Social Information for Mobile User</span>&nbsp;&nbsp;
+Social Information for Mobile User (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.koreascience.or.kr/article/ArticleFullRecord.jsp?cn=JBCRJM_2013_v2n9_603">[View]</a>&nbsp;<a href="./bib/nc4.bib">[Bib]</a>
 <br>
 Jeong-Woo Son, <span class="self">Yong-Jin Han</span>,
@@ -162,7 +162,7 @@ Intelligent visual interfaces for text analysis (IVITA), 2010
 </li>
 <li class="publication" data-time="20140601" data-venue="Journal of KIISE : Software and Applications" data-topic="Computational Social Science" data-type="National Journal Papers">
 <span class="paper_title">Relation-Context Topic Model
-for Social Relationship Classification</span>&nbsp;&nbsp;
+for Social Relationship Classification (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02432636">[View]</a>&nbsp;<a href="./bib/jk3.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span>,
@@ -173,7 +173,7 @@ Journal of KIISE : Software and Applications, 41(6), 2014
 </li>
 <li class="publication" data-time="20120601" data-venue="Journal of KIISE : Software and Applications" data-topic="Semantic Web" data-type="National Journal Papers">
 <span class="paper_title">A Method for Collecting
-Sentences Entailing Ontology Schema Triple</span>&nbsp;&nbsp;
+Sentences Entailing Ontology Schema Triple (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE01879762">[View]</a>&nbsp;<a href="./bib/jk4.bib">[Bib]</a>
 <br>
 Jin-Wook Jeong, <span class="self">Yong-Jin Han</span>,
@@ -184,7 +184,7 @@ Journal of KIISE : Software and Applications, 39(6), 2012
 </li>
 <li class="publication" data-time="20121201" data-venue="Journal of KIISE : Software and Applications" data-topic="Natural Language Processing" data-type="National Journal Papers">
 <span class="paper_title">Natural Language Interface
-Using Query Generation</span>&nbsp;&nbsp;
+Using Query Generation (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02055372">[View]</a>&nbsp;<a href="./bib/jk5.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span>, Seyoung
@@ -195,7 +195,7 @@ Journal of KIISE : Software and Applications, 39(12), 2012
 </li>
 <li class="publication" data-time="20081001" data-venue="Journal of Korean Institute of Intelligent Systems" data-topic="Semantic Web" data-type="National Journal Papers">
 <span class="paper_title">A Measurement for the Degree
-of Semantic Relationship Between Two Instances Based on Context</span>&nbsp;&nbsp;
+of Semantic Relationship Between Two Instances Based on Context (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE01086734">[View]</a>&nbsp;<a href="./bib/jk6.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span>, Seyoung
@@ -218,7 +218,7 @@ International Journal of Fuzzy Logic and Intelligent Systems, 7(4),
 </li>
 <li class="publication" data-time="20110601" data-venue="Korea Computer Congress (KCC)" data-topic="Natural Language Processing" data-type="National Conference Papers">
 <span class="paper_title">Automatic Collecting of
-Natural Language Expressions of Relations for Natural Language Interface</span>&nbsp;&nbsp;
+Natural Language Expressions of Relations for Natural Language Interface (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE01687893">[View]</a>&nbsp;<a href="./bib/nc3.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span> Seyoung
@@ -314,7 +314,7 @@ Computational Science and Engineering (CSE), 2009
 </li>
 <li class="publication" data-time="20120601" data-venue="Korea Computer Congress (KCC)" data-topic="Information Retrieval" data-type="National Conference Papers">
 <span class="paper_title">Conceptual Reranking Using
-Single Document Feedback</span>&nbsp;&nbsp;
+Single Document Feedback (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE01904022">[View]</a>&nbsp;<a href="./bib/nc1.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span> Seyoung
@@ -325,7 +325,7 @@ Korea Computer Congress (KCC), 2012
 </li>
 <li class="publication" data-time="20121101" data-venue="Korea Computer Congress (KCC)" data-topic="Computational Social Science" data-type="National Conference Papers">
 <span class="paper_title">Social Relationship
-Classification of Mobile Usesrs by Context-awareness</span>&nbsp;&nbsp;
+Classification of Mobile Usesrs by Context-awareness (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE02058107">[View]</a>&nbsp;<a href="./bib/nc2.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span>, Seyoung
