--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@ href="javascript:toggle('data-venue', false)">Sort by venue</a>-->|
 <div class="anchors"></div>
 <div class="publications"> </div>
 <br>
+<h2> Dessertations</h2>
+<span class="paper_title">Topic Models for Finding Social Interaction Patterns Using Calls and Proximity Logs</span>&nbsp;&nbsp;
+<a href="./pdf/phD.pdf">[PDF]</a>
+<br>
+Ph.D, Kyungpook National University, Feb 2016<br>
+<span class="paper_title">A Measurement of Semantic Association between Instances Based on an Ontology</span>&nbsp;&nbsp;
+<a href="./pdf/master.pdf">[PDF]</a>
+(In Korean)<br>
+M.S, Kyungpook National University, Aug 2008<br>
+<br>
 </div>
 </div>
 <div id="publicationdatabase" style="display: none;">
@@ -195,7 +205,8 @@ Journal of KIISE : Software and Applications, 39(12), 2012
 </li>
 <li class="publication" data-time="20081001" data-venue="Journal of Korean Institute of Intelligent Systems" data-topic="Semantic Web" data-type="National Journal Papers">
 <span class="paper_title">A Measurement for the Degree
-of Semantic Relationship Between Two Instances Based on Context (In Korean)</span>&nbsp;&nbsp;
+of Semantic Relationship Between Two Instances Based on Context (In
+Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE01086734">[View]</a>&nbsp;<a href="./bib/jk6.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span>, Seyoung
@@ -218,7 +229,8 @@ International Journal of Fuzzy Logic and Intelligent Systems, 7(4),
 </li>
 <li class="publication" data-time="20110601" data-venue="Korea Computer Congress (KCC)" data-topic="Natural Language Processing" data-type="National Conference Papers">
 <span class="paper_title">Automatic Collecting of
-Natural Language Expressions of Relations for Natural Language Interface (In Korean)</span>&nbsp;&nbsp;
+Natural Language Expressions of Relations for Natural Language
+Interface (In Korean)</span>&nbsp;&nbsp;
 <a href="http://www.dbpia.co.kr/Journal/ArticleDetail/NODE01687893">[View]</a>&nbsp;<a href="./bib/nc3.bib">[Bib]</a>
 <br>
 <span class="self">Yong-Jin Han</span> Seyoung
